<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data></data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:background="?attr/selectableItemBackground"
            android:elevation="4dp"
            android:foreground="?attr/selectableItemBackground"
            app:cardBackgroundColor="@android:color/white"
            app:cardCornerRadius="4dp"
            app:cardElevation="3dp"
            app:cardUseCompatPadding="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/product_image"
                        android:layout_width="match_parent"
                        android:layout_height="140dp"
                        android:layout_weight="1"
                        tools:srcCompat="@tools:sample/backgrounds/scenic"
                        android:contentDescription="TODO" />

                    <TextView
                        android:id="@+id/product_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="16dp"
                        android:layout_weight="1"
                        android:textAlignment="center"
                        android:textColor="@android:color/black"
                        android:textSize="22sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/product_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="12dp"
                        android:textAlignment="textStart"
                        android:textColor="@android:color/black"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/product_price"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="12dp"
                        android:textAlignment="center"
                        android:textColor="@android:color/black"
                        android:textSize="22sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="4dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:baselineAligned="false">

                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <ImageButton
                                android:id="@+id/btn_minus"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="end"
                                android:background="@drawable/botao_quantidade_menos"
                                android:contentDescription="@string/botao_menos"
                                android:minHeight="48dp"
                                android:paddingHorizontal="16dp"
                                android:paddingVertical="4dp"
                                android:src="@android:drawable/arrow_down_float"
                                app:tint="@color/white" />

                            <EditText
                                android:id="@+id/edit_Qtde"
                                android:layout_width="50dp"
                                android:layout_height="match_parent"
                                android:background="@color/transparent"
                                android:clickable="false"
                                android:cursorVisible="false"
                                android:ems="10"
                                android:focusable="false"
                                android:inputType="number"
                                android:text="@string/_1"
                                android:textAlignment="center"
                                android:autofillHints="" />

                            <ImageButton
                                android:id="@+id/btn_add"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="end"
                                android:contentDescription="@string/botao_mais"
                                android:background="@drawable/botao_quantidade_mais"
                                android:minHeight="48dp"
                                android:labelFor="@+id/btn_add"
                                android:paddingHorizontal="16dp"
                                android:paddingVertical="4dp"
                                android:src="@android:drawable/arrow_up_float"
                                app:tint="@color/white"/>

                        </LinearLayout>
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageButton
                            android:id="@+id/btn_Checkout"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:contentDescription="@string/botao_checkout"
                            android:layout_marginEnd="2dp"
                            android:background="@drawable/botao_checkout"
                            app:srcCompat="@drawable/and_shop_custom" />
                    </RelativeLayout>


                </LinearLayout>

                <Button
                    android:id="@+id/btn_Comprar"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/Framework"
                    android:text="@string/comprar"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>

