<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.activity.login.Login">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#FFFFFF"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center">

                <ImageView
                    android:id="@+id/img_logo_facialmaps"
                    android:layout_width="wrap_content"
                    android:layout_height="114dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="48dp"
                    android:layout_marginEnd="48dp"
                    android:contentDescription="@string/login"
                    app:srcCompat="@drawable/framework_logo"
                    tools:ignore="ImageContrastCheck" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.4">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/campo_Login"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="48dp"
                        android:layout_marginTop="48dp"
                        android:layout_marginEnd="48dp"
                        android:theme="@style/Tema_loginEdit"
                        app:endIconMode="clear_text"
                        app:errorEnabled="true"
                        app:hintEnabled="true"
                        app:hintTextAppearance="@style/Appearance_loginEdit"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:startIconDrawable="?android:attr/fingerprintAuthDrawable">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/login"
                            android:inputType="text|textCapSentences"
                            android:maxLength="20"
                            android:textAlignment="textStart"
                            android:textColor="@color/black"
                            android:textSize="20sp" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/campo_Senha"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="48dp"
                        android:layout_marginTop="48dp"
                        android:layout_marginEnd="48dp"
                        android:layout_marginBottom="48dp"
                        android:theme="@style/Tema_loginEdit"
                        app:errorEnabled="true"
                        app:hintEnabled="true"
                        app:hintTextAppearance="@style/Appearance_loginEdit"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/campo_Login"
                        app:passwordToggleEnabled="true"
                        app:startIconDrawable="@android:drawable/ic_lock_idle_lock">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/senha"
                            android:inputType="text|textPassword"
                            android:maxLength="20"
                            android:textAlignment="textStart"
                            android:textColor="#000000"
                            android:textSize="20sp" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <Button
                        android:id="@+id/btn_esqueci_senha"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="48dp"
                        android:layout_marginTop="48dp"
                        android:layout_marginEnd="48dp"
                        android:layout_marginBottom="48dp"
                        android:background="@color/transparent"
                        android:text="@string/esqueciSenha"
                        android:textAlignment="textEnd"
                        android:textColor="@color/Framework"
                        android:textSize="14sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/campo_Senha" />

                    <Button
                        android:id="@+id/btn_Logar"
                        android:layout_width="match_parent"
                        android:layout_height="68dp"
                        android:layout_marginStart="48dp"
                        android:layout_marginTop="48dp"
                        android:layout_marginEnd="48dp"
                        android:background="@drawable/button_login_180d"
                        android:text="@string/entrar"
                        android:textColor="#FBFBFB"
                        android:textSize="20sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/btn_esqueci_senha" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </RelativeLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>

